--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    transition: all 0.25s cubic-bezier(0.075, 0.82, 0.165, 1);
+   /* transition: all 0.25s cubic-bezier(0.075, 0.82, 0.165, 1);*/
 }
 
 a {
